# jif-tube-back

./: .gitignore  alembic.ini  jif.db  pyproject.toml
app/: db.py  jif.db  main.py  models.py  test_db.py
app/api/: __init__.py  auth.py  dependencies.py  library.py  liked_songs.py  search.py  songs.py  users.py
app/auth/: __init__.py  auth.py  dependencies.py
app/core/: config.py  security.py
app/db/: __init__.py  session.py
app/repositories/: __init__.py  cache.py  library.py  liked_songs.py  search.py  songs.py  users.py
app/schemas/: __init__.py  library.py  liked_songs.py  search.py  songs.py  users.py
app/services/: auth_service.py  cache_service.py  youtube_service.py
migrations/: env.py
migrations/versions/: 4a9d9a1c7f58_add_liked_songs_table.py  887bef1d75a4_convert_ids_to_uuid.py  cf077f509068_test_models_detection.py
